--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
       <p class="lead">A simple calendar app for scheduling your work day</p>
       <p id="currentDay" class="lead"></p>
     </header>
+
+    <!-- Notification for booked calendar slot -->
+    <div id="confirmation" class="message">Appointment confirmed, thanks for booking!</div>
+    
     <div class="container-lg px-5">
 
       <!-- Hour blocks on the calendar -->
